--- a/docs/assets/css/common.css
+++ b/docs/assets/css/common.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
 .outer{
     height: 100vh;
     background: linear-gradient(to top, #c9c9ff 50%, #6e6ef6) no-repeat;
@@ -518,4 +519,4 @@ img{
       height: 5px;
     }
   
-  
+}
