--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
 .outer{
     height: 100vh;
     background: linear-gradient(to top, #c9c9ff 50%, #6e6ef6) no-repeat;
@@ -518,5 +518,8 @@ img{
     .btnDestacado .btnPagination{
       height: 5px;
     }
-  
-}
+ 
+    
+    .imgProfile{
+      background-color: red;
+    }
