--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
 @import url('assets/css/common.css');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&family=Roboto+Condensed&family=Roboto:wght@400;700&family=Rufina:wght@700&family=Source+Sans+3&display=swap');
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
