--- a/src/app/vacations-component/vacations-component.component.html
+++ b/src/app/vacations-component/vacations-component.component.html
@@ -5,7 +5,8 @@
   
       <div class="sectionLogin">
         <div class="userLogin">
-          <p class="userNombre">Hello! <br> <span>{{receivedData.username}}</span></p>
+          <p class="userNombre">Hello! <br> <span>usertester</span></p>
+          <!-- <p class="userNombre">Hello! <br> <span>{{receivedData.username}}</span></p> -->
             <img src="https://cdn.pixabay.com/photo/2019/08/11/18/59/icon-4399701_1280.png" alt="" class="imgProfile">
             <!-- <p>{{receivedData.username}}</p> -->
         </div>
