--- a/src/app/to-do-component/to-do-component.component.html
+++ b/src/app/to-do-component/to-do-component.component.html
@@ -2,12 +2,11 @@
 <div class="hola">
 <div class="column-1">
   <div class="buttons">
-
     <div class="sectionLogin">
     <div class="userLogin">
-      <p class="userNombre">Hello! <br> <span>usertester</span></p>
+      <img src="https://cdn.pixabay.com/photo/2019/08/11/18/59/icon-4399701_1280.png" alt="" class="imgProfile">
+      <p class="userNombre" style="margin-left: 15px;">Hello! <span>Usertester</span></p>
       <!-- <p class="userNombre">Hello! <br> <span>{{receivedData.username}}</span></p> -->
-        <img src="https://cdn.pixabay.com/photo/2019/08/11/18/59/icon-4399701_1280.png" alt="" class="imgProfile">
     </div>
     <div class="seccionHora">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-calendar2-week-fill" viewBox="0 0 16 16">
@@ -16,7 +15,6 @@
       <button class="horaFormateada">{{fechaFormateada}}</button>
     </div>
     </div>
-    <h4>Category</h4>
     <div class="rutas">
     <div class="sectionButton num1">
       <div class="work">
@@ -74,10 +72,10 @@
 
 </div>
 
-<div class="column-2 homeWork"> 
+<div class="column-2"> 
   <div class="firstLine">
     <div class="sectionTitle">
-      <h1>Work <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16" style="margin-left: 10px;">
+      <h1>Work <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-workspace" viewBox="0 0 16 16">
         <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H4Zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
         <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.373 5.373 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2H2Z"/>
       </svg></h1>
